--- a/NotMarioGame/.classpath
+++ b/NotMarioGame/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/alexa/Desktop/processing-3.3.6/core/library/core.jar"/>
+	<classpathentry kind="lib" path="/Users/gel/Desktop/Processing.app/Contents/Java/core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
