--- a/NotMarioGame/.classpath
+++ b/NotMarioGame/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/gel/Desktop/commons-lang3-3.7/commons-lang3-3.7.jar"/>
-	<classpathentry kind="lib" path="/Users/gel/Desktop/commons-lang3-3.7/core.jar"/>
+	<classpathentry kind="lib" path="C:/Users/adrul/Downloads/commons-lang3-3.7-bin/commons-lang3-3.7/commons-lang3-3.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/adrul/Downloads/processing-3.3.6-windows32/processing-3.3.6/core/library/core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
